<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="33dp"
        android:text="@string/selectMoney"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.KonversiMataUang.TextView"/>

    <RadioGroup
        android:id="@+id/moneyGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/text_select"
        app:layout_constraintTop_toBottomOf="@+id/text_select"
        style="@style/Widget.KonversiMataUang.CompoundButton.RadioButton">

        <RadioButton
            android:id="@+id/euro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/euro"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <RadioButton
            android:id="@+id/usd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usDollar" />

        <RadioButton
            android:id="@+id/yen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/japaneseYen" />

        <RadioButton
            android:id="@+id/riyal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saudiRiyal" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/moneyGroup"
        app:layout_constraintTop_toBottomOf="@+id/moneyGroup">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nilai_mata_uang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/moneyValue"
            android:textColorHint="#616161"
            tools:ignore="TextContrastCheck"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/convert_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/convert"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <TextView
        android:id="@+id/text_rupiah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/convert_result"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/convert_button"
        app:layout_constraintTop_toBottomOf="@+id/convert_button"
        tools:text="Nilai Rupiah: "
        style="@style/Widget.KonversiMataUang.TextView"/>

</androidx.constraintlayout.widget.ConstraintLayout>